--- a/11. WORKSHOPS/02. Softuni-Wizard/src/style.css
+++ b/11. WORKSHOPS/02. Softuni-Wizard/src/style.css
@@ -1,7 +1,19 @@
-body {
+html {
+    box-sizing: border-box;
     font-size: 18px;
     font-family: consolas;
 
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
+* {
+    margin: 0;
+    padding: 0;
 }
 
 .hide {
